added the user email to the git
Conflicts:
	agile-frontend/WebContent/flatfull/tpl/admin/admin-charges-collection.html

Conflicts:
	agile-frontend/WebContent/flatfull/tpl/admin/admin-charges-collection.html

--- a/agile-frontend/WebContent/flatfull/tpl/admin/admin-charges-collection.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin/admin-charges-collection.html
@@ -3,7 +3,7 @@
             <h2>{{agile_lng_translate 'plan-and-upgrade' 'past-transactions'}}</h2> 
         </div>
     <div class="panel">
-        <table class="table table-striped refund" id="sort-table" domain="{{domain}}">
+  <table class="table table-striped refund" id="sort-table" domain="{{domain}}" email="{{email}}">
             <thead>
                 <tr>
                     <th>{{agile_lng_translate 'plan-and-upgrade' 'amount-in-usd'}}</th>
