--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/image-text.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/image-text.html
@@ -19,7 +19,7 @@
                                         <table cellspacing="0" cellpadding="0" border="0" align="left">
                                             <tr>
                                                 <td valign="top" style="padding: 0px 10px 10px 0px;">
-                                                    <img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" style="display: block;max-width:350px;"width="350" height="" border="0" align="left" />
+                                                    <img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" style="display: block;max-width:350px;"width="350" height="150" border="0" align="left" />
                                                 </td>
                                             </tr>
                                         </table>
