new path for new block in lp

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
@@ -31,7 +31,7 @@
                     
                         <div class="col-md-12">
                             
-                            <div class="text-center margin-top-100 editContent" data-selector=".editContent" style="outline: rgba(233, 94, 94, 0.498039) solid 2px; outline-offset: -2px; cursor: pointer;">
+                            <div class="text-center margin-top-100">
                                 <h1>
                                     Use <b>Builder</b> to drag and drop your way                                
                                     <br>
