3 coloumn blocks fixed

--- a/agile-frontend/WebContent/misc/emailbuilder/template.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/template.html
@@ -157,7 +157,7 @@ table, td {
   td[class="responsive-cell"] {display: block;}
 
 }
-
+td[class="responsive-cell"] {vertical-align: top;}
 </style>
 </head>
 
