add edit content class

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
@@ -31,7 +31,7 @@
                     
                         <div class="col-md-12">
                             
-                            <div class="text-center margin-top-100">
+                            <div class="text-center margin-top-100 editContent ">
                                 <h1>
                                     Use <b>Builder</b> to drag and drop your way                                
                                     <br>
