Fixed acl issues

--- a/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-categories-collection.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/tickets-categories-collection.html
@@ -46,7 +46,7 @@
     </div> 
 
     {{else}}
-    <div class="col-md-9">
+    <div class="col-md-9 row">
         <div class="panel panel-default">
             <div class="panel-heading">{{agile_lng_translate 'tickets' 'knowledgebase_categorylist'}}
                 <div class="pull-right" style="margin-left:10px;margin-top:-4px;">
@@ -77,7 +77,7 @@
     </div>    
     {{/is_mobile}} 
 {{/if}}
-<div class="col-md-3 w-md  wrapper pos-rlt track-milestone-text p-t-none" >
+<div class="col-md-3" >
             <h4 class="m-t-none h4 m-b-sm">
              
                {{agile_lng_translate 'tickets' 'how-to-configure-knowledge-base'}}
