--- a/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-helpcenter-articles-collection.html
+++ b/agile-frontend/WebContent/flatfull/tpl/tickets/ticket-helpcenter-articles-collection.html
@@ -37,7 +37,7 @@
     </div>
 {{else}}
 
-    <div class="col-md-9">
+    <div class="col-md-9 row">
         <div class="panel panel-default">
             <div class="panel-heading">{{agile_lng_translate 'tickets' 'knowledgebase_articlelist'}}
                 <div class="pull-right" style="margin-top:-4px;">
@@ -65,7 +65,7 @@
     </div>
 {{/is_mobile}}
 
-    <div class="col-md-3 w-md  wrapper pos-rlt track-milestone-text p-t-none" >
+    <div class="col-md-3 pos-rlt track-milestone-text p-t-none" >
             <h4 class="m-t-none h4 m-b-sm">
                {{agile_lng_translate 'tickets' 'how-to-configure-knowledge-base'}}
             </h4>
