--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/column-2-image-text.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/column-2-image-text.html
@@ -24,7 +24,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" class="image-caption-content image imageInColumn" >
-                                                            <img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/240x240.png" alt="" style="display: block;max-width:240px;" height="240" align="2" border="0" width="240">
+                                                            <img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/240x240.png" data-maxwidth="240" alt="" style="display: block;max-width:240px;" height="240" align="2" border="0" width="240">
                                                         </td>
                                                     </tr>
                                                     <tr>
@@ -57,7 +57,7 @@
                                                     </tr>
                                                     <tr>
                                                         <td align="center" class="image-caption-content image  imageInColumn" >
-                                                            <img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/240x240.png" alt="" style="display: block;max-width:240px;" height="240" align="2" border="0" width="240">
+                                                            <img src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/240x240.png" data-maxwidth="240" alt="" style="display: block;max-width:240px;" height="240" align="2" border="0" width="240">
                                                         </td>
                                                     </tr>
                                                     <tr>
