--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/column-3-image-text.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/column-3-image-text.html
@@ -24,7 +24,7 @@
                                                                         </tr>
                                                                         <tr>
                                                                             <td align="center" class="image-caption-content image imageInColumn">
-                                                                            <img alt="" border="0" height="160" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_160x160.png" style="display: block;max-width: 160px;" width="160"></td>
+                                                                            <img alt="" border="0" height="160" data-maxwidth="160" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_160x160.png" style="display: block;max-width: 160px;" width="160"></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td height="15" width="100%"></td>
@@ -60,7 +60,7 @@
                                                                         </tr>
                                                                         <tr>
                                                                             <td align="center" class="image-caption-content image imageInColumn">
-                                                                            <img alt="" border="0" class="" height="160" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_160x160.png" style="display: block; border: none;max-width: 160px;" width="160"></td>
+                                                                            <img alt="" border="0" class="" height="160" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_160x160.png" data-maxwidth="160" style="display: block; border: none;max-width: 160px;" width="160"></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td height="15" width="100%"></td>
@@ -96,7 +96,7 @@
                                                                         </tr>
                                                                         <tr>
                                                                             <td align="center" class="image-caption-content image imageInColumn" >
-                                                                            <img alt="" border="0" class="" height="160" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_160x160.png" style="display: block; border: none;max-width: 160px;" width="160"></td>
+                                                                            <img alt="" border="0" class="" height="160" data-maxwidth="160" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_160x160.png" style="display: block; border: none;max-width: 160px;" width="160"></td>
                                                                         </tr>
                                                                         <tr>
                                                                             <td height="15" width="100%"></td>
