ui changes done

--- a/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/widget-add.html
@@ -64,10 +64,18 @@
 					  					</span>
 									</center>  
 				        		{{else}}
+				        			{{#if_equals name "Android"}}
+										<center>  
+						  					<span style="font-size: 24px;width: 135px;height: 50px; text-align:center;vertical-align: middle;">
+						  						<img src="{{logo_url}}" style="height: 47px;">
+						  					</span>
+										</center>  
+				        			{{else}}
 				        			<center> 
 								        <img class="m-b-none img-responsive thumb-xl bg-transparent" style="height:47px;" src="{{logo_url}}" />
 								    </center>   
-				        		{{/if_equals}}						      
+				        		{{/if_equals}}
+				        		{{/if_equals}}					      
 				 			{{/if_equals}}
 				 			{{/if_equals}}
 				 			{{/if_equals}}
@@ -86,7 +94,11 @@
 		 	{{#if_equals name "Knowlarity"}}
 				<div class="text-flow-ellipsis line-clamp line-clamp-4 widget-text" style="height:75px"  rel="tooltip" title="{{get_widget_translation name 'content'}}">
 		 	{{else}}
-				<div class="text-flow-ellipsis line-clamp line-clamp-4 widget-text" style="height:85px"  rel="tooltip">
+			 	{{#if_equals name "Android"}}
+					<div class="text-flow-ellipsis line-clamp line-clamp-4 widget-text" style="height:75px"  rel="tooltip" title="{{get_widget_translation name 'content'}}">
+			 	{{else}}
+					<div class="text-flow-ellipsis line-clamp line-clamp-4 widget-text" style="height:85px"  rel="tooltip">
+			{{/if_equals}}
 			{{/if_equals}}
 		{{/if_equals}}
 	{{/if_equals}}
@@ -181,11 +193,15 @@
 		               	 {{#if_equals name "Ozonetel"}}
 		               	  <a></a>
 		                {{else}}
+		                 {{#if_equals name "Android"}}
+		               	  <a></a>
+		                {{else}}
 		                	{{#isAdmin}}
                            		<a class="btn btn-sm btn-default acl_widget" widget-data="{{stringifyObject this}}">
   									<i class="fa fa-users"></i>
   				   		   		</a>
   				   		    {{/isAdmin}}
+  				   		   {{/if_equals}}
   				   		   {{/if_equals}}
   				   		   {{/if_equals}}
   				   		     {{/if_equals}}
@@ -233,10 +249,14 @@
 										{{#if_equals name "Knowlarity"}}
 												<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
 											{{else}}
+											{{#if_equals name "Android"}}
+												<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
+											{{else}}
 								<div class="btn-group">
   									<a type="button" class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a> 
 
 								</div>
+										{{/if_equals}}
 										{{/if_equals}}
 										{{/if_equals}}
 									{{/if_equals}}
@@ -264,10 +284,14 @@
 												{{else}}	
 												{{#if_equals name "Knowlarity"}}
 												<a class="btn btn-sm btn-default add-widget" href="#callscript" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
+											{{else}}
+											{{#if_equals name "Android"}}
+												<a class="btn btn-sm btn-default add-widget" href="#callscript" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
 											{{else}}																			
 											<div class="btn-group">
   												<a class="btn btn-sm btn-default add-widget" href="#callscript" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>		
 											</div>
+												{{/if_equals}}
 												{{/if_equals}}
 											{{/if_equals}}
 											{{/if_equals}}
@@ -295,12 +319,16 @@
 											{{else}}
 												{{#if_equals name "Knowlarity"}}
 													<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
+											{{else}}
+												{{#if_equals name "Android"}}
+													<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
 											{{else}}											
 												<div class="btn-group">
   													<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
   												</div>
 												{{/if_equals}}
 												{{/if_equals}}
+											{{/if_equals}}
 											{{/if_equals}}
 											{{/if_equals}}
 										{{/if_equals}}
@@ -326,12 +354,16 @@
 									{{else}}
 												{{#if_equals name "Knowlarity"}}
 													<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
+									{{else}}
+												{{#if_equals name "Android"}}
+													<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
 									{{else}}	
 											<div class="btn-group">										
   												<a class="btn btn-sm btn-default add-widget" href="#{{name}}" widget-name="{{name}}">{{agile_lng_translate 'other' 'add'}}</a>
 											</div>
 												{{/if_equals}}
 											{{/if_equals}}
+										{{/if_equals}}
 										{{/if_equals}}
 										{{/if_equals}}
 									{{/if_equals}}
@@ -380,6 +412,9 @@
 						{{else}}	
 							{{#if_equals name "Knowlarity"}}
 								<a class="btn btn-sm btn-default _upgrade" id="{{#is_blank name}}{{getRandomNumber}}{{else}}{{this}}{{/is_blank}}-upgrade">{{agile_lng_translate 'other' 'add'}}</a>
+						{{else}}	
+							{{#if_equals name "Android"}}
+								<a class="btn btn-sm btn-default _upgrade" id="{{#is_blank name}}{{getRandomNumber}}{{else}}{{this}}{{/is_blank}}-upgrade">{{agile_lng_translate 'other' 'add'}}</a>
 						{{else}}
 							{{#if_equals name "Skype"}}
 								<a class="btn btn-sm btn-default _upgrade" id="{{#is_blank name}}{{getRandomNumber}}{{else}}{{this}}{{/is_blank}}-upgrade">{{agile_lng_translate 'other' 'add'}}</a>
@@ -388,6 +423,7 @@
 								<div class="btn-group">										
   									<a class="btn btn-sm btn-default _upgrade" id="{{#is_blank name}}{{getRandomNumber}}{{else}}{{this}}{{/is_blank}}-upgrade">{{agile_lng_translate 'other' 'add'}}</a>
 								</div>
+								{{/if_equals}}
 								{{/if_equals}}
 								{{/if_equals}}
 							{{/if_equals}}
