added cancel button

--- a/agile-frontend/WebContent/flatfull/tpl/widget/android/android-profile.html
+++ b/agile-frontend/WebContent/flatfull/tpl/widget/android/android-profile.html
@@ -4,6 +4,7 @@
 		<div class="m-t-md  m-b-xs text-center">
 			{{#if id}}			
 				<a class="btn btn-sm btn-danger deleteWidget" widget-name="Android" widget-displayname="Android">Delete</a>
+				<a href="#add-widget" class="btn btn-default btn-sm">Cancel</a>
 			{{else}}
 				<form id="android_login_form" name="android_login_form" method="post">
 			    	<fieldset>			
