android calling project

--- a/agile-frontend/WebContent/flatfull/tpl/js-localize.html
+++ b/agile-frontend/WebContent/flatfull/tpl/js-localize.html
@@ -774,6 +774,11 @@ var _Agile_Resources_Json = {
             "Knowlarity-name" : "{{agile_lng_translate 'widgets' 'knowlarity-name'}}",
             "Knowlarity-cancel" : "{{agile_lng_translate 'widgets' 'knowlarity-cancel'}}",
 
+            "Android-content" : "{{agile_lng_translate 'widgets' 'android-content'}}",
+            "Android-displayName" : "{{agile_lng_translate 'widgets' 'android-displayName'}}",
+            "Android-name" : "{{agile_lng_translate 'widgets' 'android-name'}}",
+            "Android-cancel" : "{{agile_lng_translate 'widgets' 'android-cancel'}}",
+
             "Braintree-content" : "{{agile_lng_translate 'widgets' 'Braintree-content'}}",
             "Braintree-displayName" : "{{agile_lng_translate 'widgets' 'Braintree-displayName'}}",
             "Braintree-name" : "{{agile_lng_translate 'widgets' 'Braintree-name'}}",
@@ -856,11 +861,14 @@ var _Agile_Resources_Json = {
             "no-fb-account" : "{{agile_lng_translate 'widgets' 'no-fb-account'}}",
             "modify-search" : "{{agile_lng_translate 'widgets' 'modify-search'}}",
             "this-person-doesnt-share-his-her" : "{{agile_lng_translate 'widgets' 'this-person-doesnt-share-his-her'}}",
+            
             "linkedin-no-updates" : "{{agile_lng_translate 'widgets' 'linkedin-no-updates'}}",
             "linkedin-url-invalid" : "{{agile_lng_translate 'linkedin' 'url-invalid'}}",
             "linked-no-connections" : "{{agile_lng_translate 'widgets' 'linked-no-connections'}}",
             "linkedin-regeant" : "{{agile_lng_translate 'widgets' 'linkedin-regeant'}}",
-           "paypal-error" : "{{agile_lng_translate 'widgets' 'paypal-error'}}",
+
+            "paypal-error" : "{{agile_lng_translate 'widgets' 'paypal-error'}}",
+            
             "link-your Stripe" : "{{agile_lng_translate 'widgets' 'link-your Stripe'}}",
             "link-your-twitter" : "{{agile_lng_translate 'widgets' 'link-your-twitter'}}",
             "twitter-url-invalid" : "{{agile_lng_translate 'twitter' 'url-invalid'}}",
