--- a/agile-frontend/WebContent/flatfull/tpl/emailbuilder/emailbuilder-add.html
+++ b/agile-frontend/WebContent/flatfull/tpl/emailbuilder/emailbuilder-add.html
@@ -23,8 +23,8 @@
 
 <div class="col-md-2">
   <div class="form-group">
-    <b>{{agile_lng_translate 'prefs-email-templates' 'enter-subject'}}</b> <span class="field_req">*</span><br>
-    <input type="text" class="form-control required" name="subject" id="subject" placeholder="{{agile_lng_translate 'prefs-email-templates' 'enter-subject'}}">
+    <b>{{agile_lng_translate 'prefs-email-templates' 'enter-email-subject'}}</b> <span class="field_req">*</span><br>
+    <input type="text" class="form-control required" name="subject" id="subject" placeholder="{{agile_lng_translate 'prefs-email-templates' 'enter-email-subject'}}">
     <input type="hidden" class="form-control" id="templateid" value="{{#if_equals action "edit"}}{{templateId}}{{/if_equals}}">
   </div>
 </div>
