fixed loading button click issue

--- a/agile-frontend/WebContent/flatfull/tpl/segmentation/segmentation-custom-view.html
+++ b/agile-frontend/WebContent/flatfull/tpl/segmentation/segmentation-custom-view.html
@@ -172,9 +172,9 @@
    <div id="message-id" class="alert bg-white" style="padding:9px; text-align: center;">
       <div id="scanned_upto" style="display: inline-block;">Scanned upto 2016-12-26 10:49:25</div>
       <a href="#" class="load_more btn btn-default btn-sm m-l-sm m-r-sm bg-light" id="load_more" style="display: inline;" >Load more</a>
-      <a href="#" class="btn btn-default btn-sm m-l-sm m-r-sm bg-light" id="load_more_loading"style="display: none;" >  <span class="yt-spinner">
+      <div class="btn btn-default btn-sm m-l-sm m-r-sm bg-light" id="load_more_loading"style="display: none;" >  <span class="yt-spinner">
                <img src="img/icn_loading_animated.gif" style="max-width:100%; height: auto;">Loading...</span>
-      </a>
+      </div>
    </div>
 </div>
 </script>
