add css changes

--- a/agile-frontend/WebContent/flatfull/tpl/admin-tag-management.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-tag-management.html
@@ -8,7 +8,7 @@
 <script id="tag-management-collection-template" type="text/html">
 <div class='row'>
 
-	<div id="searchbycharacter " class=" inline-block text-center searchbycharacterdiv tag-div col-md-9 col-xs-12">
+	<div id="searchbycharacter" class=" inline-block text-center searchbycharacterdiv m-b-sm tag-div col-md-9 col-xs-12">
 				<a class="searchbychar tag-alpha"    href="#" data-target="A"> A </a>
 				<a class="searchbychar tag-alpha" href="#" data-target="B">B</a>
 				<a class="searchbychar tag-alpha" href="#" data-target="C">C</a>
@@ -48,7 +48,7 @@
 
 	</ul>
 	</div> -->
-	<div class="pull-right m-b-md col-md-3">
+	<div class="pull-right m-b-md ">
 		<div class=" pull-left m-r-xs" style="display:inline;">
 			
 		</div>
