fixed new block issue

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout4.html
@@ -22,19 +22,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img src="http://www.consumer.es/imgs/2016/12/comprar-online-seguridad-consejos.jpg" alt="...">
-                      <div class="  editContent">
-                        <h3>Thumbnail label</h3>
-                      </div>
-                      <div class=" editContent">Loren Ipsum bla bla bla.
-                      </div>
-                      <div class="caption "><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Bton</a>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-sm-6 col-md-3">
-                    <div class="thumbnail">
-                      <img src="http://www.consumer.es/imgs/2016/12/dropbox-alojamiento-nube.jpg" alt="...">
+                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/12/comprar-online-seguridad-consejos.jpg" alt="">
                       <div class="  editContent">
                         <h3>Thumbnail label</h3>
                       </div>
@@ -46,7 +34,19 @@
                   </div>
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img src="http://www.consumer.es/imgs/2016/06/compraenredessociales-sophia-portada1-750.png" alt="...">
+                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/12/dropbox-alojamiento-nube.jpg" alt="">
+                      <div class="  editContent">
+                        <h3>Thumbnail label</h3>
+                      </div>
+                      <div class=" editContent">Loren Ipsum bla bla bla.
+                      </div>
+                      <div class="caption "><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-3">
+                    <div class="thumbnail">
+                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/06/compraenredessociales-sophia-portada1-750.png" alt="">
                       <div class="  editContent">
                         <h3>Thumbnail label</h3>
                       </div>
@@ -58,7 +58,7 @@
                   </div>
                   <div class="col-sm-6 col-md-3">
                     <div class="thumbnail">
-                      <img src="http://www.consumer.es/imgs/2016/06/compraenredessociales-sophia-portada1-750.png" alt="...">
+                      <img class="img-responsive" src="http://www.consumer.es/imgs/2016/06/compraenredessociales-sophia-portada1-750.png" alt="">
                       <div class=" editContent">
                         <h3>Thumbnail label</h3>
                       </div>
