--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout1.html
@@ -27,7 +27,7 @@
     			<div class="row">
     			
     				<div class="col-md-8 col-md-offset-2">
-                        <img src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/image1.png" data-video="" width="800" height="281" title="Play Video" class="img-responsive" />	
+                        <img src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/image1.png" data-video="" width="800" height="281" class="img-responsive" />	
     				</div><!-- ./col-md-8 -->
     			
     			</div><!-- /.row -->
