--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout5.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout5.html
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-md-6">
                   <div class="thumbnail">
-                    <img src="http://www.consumer.es/imgs/2016/12/comprar-online-seguridad-consejos.jpg" alt="...">
+                    <img class="img-responsive" src="http://www.consumer.es/imgs/2016/12/comprar-online-seguridad-consejos.jpg" alt="">
                    
                       <div class="  editContent"><h3>Thumbnail label</h3></div>
                       <div class="  editContent">Loren Ipsum bla bla bla.</div>
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="thumbnail">
-                    <img src="http://www.consumer.es/imgs/2016/12/dropbox-alojamiento-nube.jpg" alt="...">
+                    <img class="img-responsive" src="http://www.consumer.es/imgs/2016/12/dropbox-alojamiento-nube.jpg" alt="">
                     
                       <div class="  editContent"><h3>Thumbnail label</h3></div>
                       <div class="  editContent">Loren Ipsum bla bla bla.</div>
