--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout3.html
@@ -19,11 +19,11 @@
         		<div class="wrapper"> 	
         			
         		     <div class="container">
-                        <div class="editContent">
-                            <h2 class="text-center" style="padding-bottom:0px;margin-top: 70px;">Top 3 Reasons to choose Agile</h2>
+                        <div class="editContent text-center">
+                            <h2 class="" style="padding-bottom:0px;margin-top: 70px;">Top 3 Reasons to choose Agile</h2>
                         </div>
-                        <div class="editContent">
-                            <p class="text-center" style="margin-bottom:15px; line-height: 1.5; font-size: 14; color: #8f8f8f;">All-in-One. Affordable. Next-Generation.</p>
+                        <div class="editContent text-center" style="font-size: 14; color: #8f8f8f;">
+                            <p class="" style="margin-bottom:15px; line-height: 1.5;">All-in-One. Affordable. Next-Generation.</p>
                         </div>
                         <div class="row" style="padding-top: 15px;"> 
                            <div class="col-sm-6 col-lg-6 ">
