affiliate link not showing if addblocker installed so that changed the class name from affiliate-link to agile-affiliate-link

--- a/agile-frontend/WebContent/flatfull/tpl/prefs-dropdown-options.html
+++ b/agile-frontend/WebContent/flatfull/tpl/prefs-dropdown-options.html
@@ -131,7 +131,7 @@
 						</div>
 						</a>
 					</div>
-					<div class="col-md-3 col-sm-6 col-xs-12 m-t-sm affiliate-link">
+					<div class="col-md-3 col-sm-6 col-xs-12 m-t-sm agile-affiliate-link">
 						<a href="#affiliate-overview" id="affiliate_link">
 						<div class="panel panel-default">
 							<!--<div class="panel-heading">
